code clean up, skin modified

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -102,7 +102,7 @@
 	                    Test Site Time: <span id="testSiteTime{{ source.shortName }}">0</span>
 	                </div>
 	                </section>
-                </div>><!--  item -->
+                </div><!--  item -->
             {% endfor %}
             </div> <!--  js masonry container -->
 
@@ -114,7 +114,24 @@
 {% block jsInit %}
 {% include "xgds_video/init_notes.js" %}
  {% if segmentsJson %}
- 	var baseUrl = "{{ baseUrl }}";
+    //globals
+    var xgds_video = { masterSlider: '',
+                       playFlag: true,
+                       initialState: true,
+                       seekOffsetList: {},
+                       playerTime: null,
+                       playerSource: null,
+                       baseUrl: "{{ baseUrl}}",
+                       episode: ({{ episodeJson|safe }}=="None") ? null : {{ episodeJson|safe }},
+                       displaySegments: {{ segmentsJson|safe }},
+                       firstSegment: null,
+                       lastSegment: null,
+                       skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml'
+                     };
+
+    // displaySegments are in json format like this:
+    // displaySegments['RD1'] = {segment1, segment2, segment3}
+    // displaySegments['RD1'][0].startTime would return start time of one of the segments.
                 
     //helper for converting json datetime object to javascript date time
     function toJsDateTime(jsonDateTime) {
@@ -127,44 +144,37 @@
     }
 
     //convert episode start/end time to javascript dateTime
-    var episode = ({{ episodeJson|safe }}=="None") ? null : {{ episodeJson|safe }};
-    if (episode) { 
-        episode.startTime = toJsDateTime(episode.startTime);
-        episode.endTime = toJsDateTime(episode.endTime);
+    if (xgds_video.episode) { 
+        xgds_video.episode.startTime = toJsDateTime(xgds_video.episode.startTime);
+        xgds_video.episode.endTime = toJsDateTime(xgds_video.episode.endTime);
     }
        
-    // displaySegments are in json format like this:
-    // displaySegments['RD1'] = {segment1, segment2, segment3}
-    // displaySegments['RD1'][0].startTime would return start time of one of the segments.
-    var displaySegments = {{ segmentsJson|safe }};
 
     // convert segment start and end times to javascript dateTime
-    var firstSegment = null;
-    var lastSegment = null;
 
     {% for source in sources %}
-        var segments = displaySegments["{{ source.shortName }}"]; 
+        var segments = xgds_video.displaySegments["{{ source.shortName }}"]; 
         if ((segments != undefined) && (segments.length > 0)) {
             $.each(segments, function(id) {
                 var segment = segments[id];
                 segment.startTime = toJsDateTime(segment.startTime);
                 segment.endTime = toJsDateTime(segment.endTime);
 
-                if(firstSegment == null) {
-                    firstSegment = segment;
+                if(xgds_video.firstSegment == null) {
+                    xgds_video.firstSegment = segment;
                 }
-                if (lastSegment == null) {
-                    lastSegment = segment;
+                if (xgds_video.lastSegment == null) {
+                    xgds_video.lastSegment = segment;
                 }
 
                 if (segment.startTime) {
-                    if(segment.startTime < firstSegment.startTime) {
-                        firstSegment = segment;
+                    if(segment.startTime < xgds_video.firstSegment.startTime) {
+                        xgds_video.firstSegment = segment;
                     }
                 }
                 if (segment.endTime) {
-                    if (segment.endTime > lastSegment.endTime) {
-                        lastSegment = segment;
+                    if (segment.endTime > xgds_video.lastSegment.endTime) {
+                        xgds_video.lastSegment = segment;
                     }
                 }
             });
