more debugging for recorded video using new clean set of video files

--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -126,7 +126,7 @@
                        displaySegments: {{ segmentsJson|safe }},
                        firstSegment: null,
                        lastSegment: null,
-                       skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml'
+                       skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml',
                      };
 
     // displaySegments are in json format like this:
