--- a/xgds_video/templates/xgds_video/activeVideoSegments.html
+++ b/xgds_video/templates/xgds_video/activeVideoSegments.html
@@ -12,6 +12,8 @@
     	var isLive = false;
     </script>
     <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
+ 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
+ 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/activeVideoSegments.js"></script>
     <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
@@ -93,9 +95,9 @@
 	                <!--embed the video-->
 	                <section>
 	                 <div id="player_container" class="float-left">
-	                	<div id="myPlayer{{ source.shortName }}"></div>
+	                	<div id="{{ source.shortName }}"></div>
 	                </div> <!--  player-container -->
-	                <div id="myPlayer{{ source.shortName }}Label" style="float:left;text-align:left;font-family:arial,verdana,helvetica"> </div>
+	                <div id="{{ source.shortName }}Label" style="float:left;text-align:left;font-family:arial,verdana,helvetica"> </div>
 	                </section>
 	                <section>
 	                <div class="float-left">
@@ -127,8 +129,11 @@
                        firstSegment: null,
                        lastSegment: null,
                        skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml',
+                       onTimePlayer: "{{ sources.0.shortName }}",
+                       movingSlider: false //if slider is moving, turn off onTime call
                      };
 
+    console.log("onTimePlayer: ", xgds_video.onTimePlayer);
     // displaySegments are in json format like this:
     // displaySegments['RD1'] = {segment1, segment2, segment3}
     // displaySegments['RD1'][0].startTime would return start time of one of the segments.
@@ -184,7 +189,8 @@
     //set up the slider and the player
     setupSlider();
     setupJWplayer();
- {% endif %}
+
+{% endif %}
  
  	//update masonry sizing
  	$('#container').masonry().masonry();
