--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -14,7 +14,7 @@
     <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
- 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/activeVideoSegments.js"></script>
+ 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoPlayer.js"></script>
     <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}external/js/date.js"></script>
@@ -77,7 +77,7 @@
                     </div>
                 </div>
   
-            <div id="container" class="js-masonry" data-masonry-options='{  "itemSelector": ".item", "gutter":5, "isInitLayout":false}'>
+            <div id="container" class="js-masonry" data-masonry-options='{"itemSelector": ".item", "gutter":5, "isInitLayout":false}'>
             {% for source in sources %}
                 <div class="item" id="item{{ forloop.counter }}">
 	                <div class="buttons">
@@ -121,8 +121,6 @@
                        playFlag: true,
                        initialState: true,
                        seekOffsetList: {},
-                       playerTime: null,
-                       playerSource: null,
                        baseUrl: "{{ baseUrl}}",
                        episode: ({{ episodeJson|safe }}=="None") ? null : {{ episodeJson|safe }},
                        displaySegments: {{ segmentsJson|safe }},
@@ -130,7 +128,10 @@
                        lastSegment: null,
                        skinURL: STATIC_URL + 'external/js/jwplayer/jw6-skin-sdk/skins/six/six.xml',
                        onTimePlayer: "{{ sources.0.shortName }}",
-                       movingSlider: false //if slider is moving, turn off onTime call
+                       movingSlider: false, //if slider is moving, turn off onTime call
+                       playerId: "", //needed for flash players (playlistItem then seek)
+                       playerIdx: null, //needed for flash
+                       playerOffset: null //needed for flash players (playlistItem then seek)
                      };
 
     console.log("onTimePlayer: ", xgds_video.onTimePlayer);
