--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -65,6 +65,24 @@ div.tagsinput[style]{
     float:left;
 }
 
+.masterSlider .ui-slider {
+    border-radius: 2px;
+}
+.masterSlider .ui-slider-handle {
+    border-radius: 4px;
+    width: 0.4em;
+    margin-left: -0.2em;
+    background: #202020;
+}
+
+div.ui-slider-range.ui-widget-header {
+    background: #505050;
+}
+
+#legend {
+   clear: both; 
+}
+
 #seekTimeBox {
     background:#CACACA; 
     padding:8px; 
