Add framework for dynamic rendering of m3u8 index files.  Implementation needs to be completed

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -133,6 +133,7 @@
                        movingSlider: false, //if slider is moving, turn off onTime call
                        seekOffsetList: {}, //needed for seeking vid in flash mode
                        haltOtherEvents: false, //for onComplete, awaken idle players.
+	               indexFileUrl: "{% url 'xgds_video_index_file' %}",
                      };
 
     // displaySegments are in json format like this:
