using new seekfcn; progress made in hooks for autogenerating index files

--- a/xgds_video/static/xgds_video/css/xgds_video.css
+++ b/xgds_video/static/xgds_video/css/xgds_video.css
@@ -80,7 +80,10 @@ div.ui-slider-range.ui-widget-header {
 }
 
 #legend {
-   clear: both; 
+    float: left;
+    position: absolute;
+    clear:both;
+    font-size:10px;
 }
 
 #seekTimeBox {
@@ -139,5 +142,12 @@ div.ui-slider-range.ui-widget-header {
 }
 
 #volume {
+    float: right;
+}
+
+.tooltip { 
+    font-size: 17px;
+    width: 100px;
+    color: white;
     float: right;
 }
