passing short name for source

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -92,7 +92,7 @@
 	                    {% endwith %}
 	                </div>
 					<section>
-	                {% include "xgds_video/video_notes.html" with data=source.form source=source.name %}
+	                {% include "xgds_video/video_notes.html" with data=source.form source=source.shortName %}
 	                </section>
 	                <!--embed the video-->
 	                <section>
