--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -9,6 +9,7 @@
  <script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
   <script src="{{STATIC_URL}}xgds_video/js/video_size_utils.js" type="text/javascript" ></script>
   <script type="text/javascript">
+    var STATIC_URL = '{{STATIC_URL}}';
     var submitNoteUrl = '{% url record_simple %}';
  	var maxWidth = getMaxWidth({{videoFeedData|length}});
  	var isLive = true;
@@ -50,7 +51,7 @@
 	     	<a class="mybutton toprow-right" href="{% url xgds_video_recorded %}?source={{ feed.source.shortName }}">Recorded</a>
 	     </div>
 	     <section>
-	     {% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName %}
+	     {% include "xgds_video/video_notes.html" with data=form source=feed.source.shortName STATIC_URL=STATIC_URL %}
 	     </section>
 	     <script language="javascript" type="text/javascript">
 		  $("#item{{ forloop.counter }}").css({"width":size[0],"height":size[1]+100}); 
