--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -1,23 +1,24 @@
 {% with form=data %}
 {% if user.is_authenticated %}
-<div style="float:left; padding-top:2px; padding-bottom:2px;" >
+<div style="clear:left;padding-top:2px; padding-bottom:2px;" >
 	<form id="create_note{{ form.index }}" class="create_note_form" action="" method="POST">
-		<div style="float:left" id="error_div" style="color:red">
-			{{ form.non_field_errors }}
-			{{ form.errors }}
-			<label id="error_content"></label>
+		<input type="hidden" id="id_index" value="{{ form.index }}" >
+       	<input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
+       	<input type="hidden" id="source" value="{{ source }}" >
+		<div id="error_div{{ form.index }}" style="float:left; height:15px;padding-bottom:2px;">
+			<img src="{{STATIC_URL}}xgds_video/images/ipx.gif" id="error_image{{ form.index }}" width="12"></img>
+			<label id="error_content{{ form.index }}" ></label>
 		</div>
-		<div style="float:left">
-			<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
-		</div>
-        <div style="float:left">
-        	<label for="id_tags">Tags:</label>
-        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
-			<input type="hidden" id="id_index" value="{{ form.index }}" >
-    	 	{{ form.extras }}
-        	<input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
-        	<input type="hidden" id="source" value="{{ source }}" >
-        	<input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
+		<div style="clear:left; padding-top:3px;">
+			<div style="float:left;padding-right: 5px;">
+				<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
+			</div>
+	        <div style="float:left; ">
+	        	<label for="id_tags">Tags:</label>
+	        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
+	        	{{ form.extras }}
+	        	<input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
+	        </div>
         </div>
   </form>
 </div>
