--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -70,7 +70,7 @@
                     </div>
                     <div id="legend"></div>
                     
-                    <div id=seekTimeBox>
+                    <div>
                         <input  id="seekTime" type="text" name="text-input" placeholder="&#xf017; play from time (HH:MM:SS)" class="stylish"/>
                         <button type="submit" class="mybutton" id="seekButton" onclick=seekCallBack()>
                             <i class="fa fa-share"></i> Seek
