--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -15,10 +15,14 @@
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoPlayer.js"></script>
+ 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoGoogleEarth.js"></script>
     <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}external/js/date.js"></script>
  	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
+    <!-- google earth plugin -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+ 
 {% endblock headExtras %}
 
  {% block cssExtras %}
@@ -108,6 +112,12 @@
 	                </section>
                 </div><!--  item -->
             {% endfor %}
+
+            <!-- google earth plugin --> 
+            <div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
+            <div id="map3d" style="height: 400px; width: 600px;"></div>
+            </div>
+
             </div> <!--  js masonry container -->
 
         {% endif %}
@@ -139,31 +149,9 @@
     // displaySegments are in json format like this:
     // displaySegments['RD1'] = {segment1, segment2, segment3}
     // displaySegments['RD1'][0].startTime would return start time of one of the segments.
-                
-    //helper for converting json datetime object to javascript date time
-    function toJsDateTime(jsonDateTime) {
-        if (jsonDateTime) {
-            //need to subtract one from month since Javascript datetime indexes month
-            //as 0 to 11.
-            jsonDateTime.month = jsonDateTime.month - 1;
-            return new Date(jsonDateTime.year, jsonDateTime.month, jsonDateTime.day, 
-                            jsonDateTime.hour, jsonDateTime.min, jsonDateTime.seconds, 0);  
-        } else { 
-            return null;
-        }
-    }
 
     //convert episode start/end time to javascript dateTime
-    if (xgds_video.episode) {
-        if (xgds_video.episode.startTime) {
-            xgds_video.episode.startTime = toJsDateTime(xgds_video.episode.startTime);
-        }
-        if (xgds_video.episode.endTime) {
-            xgds_video.episode.endTime = toJsDateTime(xgds_video.episode.endTime);
-        }
-    }
-
-    console.log("xgds_video.episode.startTime: ", xgds_video.episode.startTime);
+    convertJSONtoJavascriptDateTime(xgds_video.episode);
 
     // convert segment start and end times to javascript dateTime
     {% for source in sources %}
@@ -198,6 +186,10 @@
     //set up the slider and the player
     setupSlider();
     setupJWplayer();
+    
+    //google earth plugin
+    google.load("earth", "1", {"other_params":"sensor=true_or_false"});
+    google.setOnLoadCallback(init);
 
 {% endif %}
  	//update masonry sizing
