--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -15,13 +15,13 @@
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoSlider.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoUtils.js"></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoPlayer.js"></script>
- 	<script type="text/javascript" src="{{ STATIC_URL }}xgds_video/js/recordedVideoGoogleEarth.js"></script>
+ 	<!--script type="text/javascript" src="{ { STATIC_URL }}xgds_video/js/recordedVideoGoogleEarth.js"></script-->
     <script src="{{STATIC_URL}}external/js/jquery/jquery.tagsinput.js" type="text/javascript" ></script>
  	<script src="{{STATIC_URL}}external/js/jquery/jquery.form.min.js" type="text/javascript" ></script>
  	<script type="text/javascript" src="{{ STATIC_URL }}external/js/date.js"></script>
  	<script src="{{STATIC_URL}}xgds_video/js/video_notes_form.js" type="text/javascript" ></script>
     <!-- google earth plugin -->
-    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <!--script type="text/javascript" src="https://www.google.com/jsapi"></script-->
  
 {% endblock headExtras %}
 
@@ -64,9 +64,11 @@
                 <div id="sliderGroup">
                     <div id="sliderLabel">
                         Local Flight Time: <input type="text" id="sliderTimeLabel" readonly>
+                        Episode (Flight) Name: {{ episode.shortName }}
                     </div>
-                    
+                  
                     <div id="masterSlider" class="masterSlider"></div>
+                    
                     <div> 
                         <a class="btn btn-small btn-info" href="#" onclick=playPauseButtonCallBack()>
                             <i id="playbutton" class="fa fa-pause fa-2x"></i>
@@ -74,7 +76,7 @@
                     </div>
                     <div id="legend"></div>
                     
-                    <div>
+                    <div id="seekTimeBox">
                         <input  id="seekTime" type="text" name="text-input" placeholder="&#xf017; play from time (HH:MM:SS)" class="stylish"/>
                         <button type="submit" class="mybutton" id="seekButton" onclick=seekCallBack()>
                             <i class="fa fa-share"></i> Seek
@@ -114,10 +116,11 @@
             {% endfor %}
 
             <!-- google earth plugin --> 
-            <div class="item" id="item{{ forloop.counter }}" style="background-color:{{ source.displayColor }};">
+            <!--
+            <div class="item" id="item{ { forloop.counter }}" style="background-color:{ { source.displayColor }};">
             <div id="map3d" style="height: 400px; width: 600px;"></div>
             </div>
-
+            -->
             </div> <!--  js masonry container -->
 
         {% endif %}
@@ -143,8 +146,8 @@
                        movingSlider: false, //if slider is moving, turn off onTime call
                        seekOffsetList: {}, //needed for seeking vid in flash mode
 	                   indexFileUrl: "{% url 'xgds_video_index_file' 'flightAndSource' 'segmentIndex' %}",
+                       noteTimeStamp: "{{ noteTimeStamp }}", 
                      };
-
 
     // displaySegments are in json format like this:
     // displaySegments['RD1'] = {segment1, segment2, segment3}
@@ -186,11 +189,12 @@
     //set up the slider and the player
     setupSlider();
     setupJWplayer();
-    
+   
+    /*
     //google earth plugin
     google.load("earth", "1", {"other_params":"sensor=true_or_false"});
     google.setOnLoadCallback(init);
-
+    */
 {% endif %}
  	//update masonry sizing
  	$('#container').masonry().masonry();
