QT poster image being use was pointing to plrp and breaking the live feed in chrome. Also, little hack to make the jwplayer size not be as big when there is one player

--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -55,7 +55,7 @@
 	     </section>
 	     <script language="javascript" type="text/javascript">
 		  $("#item{{ forloop.counter }}").css({"width":size[0],"height":size[1]+100}); 
-		  QT_WriteOBJECT('https://plrp.xgds.org/static/{{ feed.name }}Stream.mov',  '100%', /* feedHeight */'100%', '', 'AUTOPLAY',
+		  QT_WriteOBJECT('http://spongebob.snrf.nasa.gov/static/{{ feed.name }}Stream.mov',  '100%', /* feedHeight */'100%', '', 'AUTOPLAY',
 		                 'True', 'qtsrc', '{{ feed.url }}', 'AutoHREF', 'True', 'SCALE', 'Aspect', 'EnableJavaScript', 'True', 'Controller', 'False', 'TARGET', 'Myself',
 		                 'emb#NAME' , 'movie{{ forloop.counter }}');
 		</script>
