quicktime link added if plugin missing

--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -39,6 +39,8 @@
     {% endblock %}
 	
 {% block contents %}
+If plugin is missing, download <a href="https://support.google.com/chrome/answer/2445742?hl=en">Quicktime Plugin For Chrome</a>
+
 <div id="container" class="js-masonry" data-masonry-options='{  "itemSelector": ".item", "gutter":5}'>
 
 {% for feed, form in videoFeedData %}
