getSegment is now in plrpExplorer

--- a/xgds_video/templates/xgds_video/video_recorded_playbacks.html
+++ b/xgds_video/templates/xgds_video/video_recorded_playbacks.html
@@ -58,7 +58,7 @@
     {% endif %}
 
     {% if not episode %}
-        <div style="font-size: 1.5em; margin: 20px;">Couldn't find any {{ searchCriteria }}.</div>
+        <div style="font-size: 1.5em; margin: 20px;">Couldn't find any Episode.</div>
     {% else %}
         {% if segmentsJson %}
         		<table>
