--- a/xgds_video/templates/xgds_video/video_feeds.html
+++ b/xgds_video/templates/xgds_video/video_feeds.html
@@ -30,7 +30,7 @@
 {% load nav %}
 {% block siteSection %}Video{% endblock %}
     {% block nav %}
-    {% nav "video.live" %}
+    {% nav "xgds_video_flights" %}
     {{ block.super }}
     {% endblock %}
     
