--- a/xgds_video/templates/xgds_video/video_notes.html
+++ b/xgds_video/templates/xgds_video/video_notes.html
@@ -6,7 +6,7 @@
        	<input type="hidden" id="id_event_time" value="{{ form.event_time.value }}" >
        	<input type="hidden" id="source" value="{{ source }}" >
 		<div id="error_div{{ form.index }}" style="float:left; height:15px;padding-bottom:2px;">
-			<img src="{{STATIC_URL}}xgds_video/images/ipx.gif" id="error_image{{ form.index }}" width="12"></img>
+			<img src="{{STATIC_URL}}xgds_video/images/ipx.gif" id="error_image{{ form.index }}" width="12" alt="error image {{form.index}}"></img>
 			<label id="error_content{{ form.index }}" ></label>
 		</div>
 		<div style="clear:left; padding-top:3px;">
@@ -14,7 +14,7 @@
 				<label for="id_content">Note:</label><input id="id_content" type="text" name="content" maxlength="500" size="20">
 			</div>
 	        <div style="float:left; ">
-	        	<label for="id_tags">Tags:</label>
+	        	<label for="id_tags{{form.index}}">Tags:</label>
 	        	<input id="id_tags{{ form.index }}" type="text" class="tags" />
 	        	{{ form.extras }}
 	        	<input id="save_note{{ form.index }}" type="submit" value="Save" class="mybutton noteSubmit">
