--- a/xgds_video/templates/xgds_video/ImageCarousel.html
+++ b/xgds_video/templates/xgds_video/ImageCarousel.html
@@ -35,8 +35,18 @@
 	Socket Status: <div id="socketStatus"></div>
 	
 	<div id="container" class="js-masonry" data-masonry-options='{"itemSelector": ".item", "gutter":5, "isInitLayout":false}'>
-		<div id="imageSources">
-		</div>
+		<div class="item" id="item" style="background-color:grey;">
+			<section>
+            {% include "xgds_video/video_notes.html" with data=source.form source="ROV" STATIC_URL=STATIC_URL %}
+            </section>
+ 			<img style='display:block;' id=cameraImage src=""></img>
+ 		</div>
+		<div class="item" id="item" style="background-color:grey;">
+			<section>
+            {% include "xgds_video/video_notes.html" with data=source.form source="ROV" STATIC_URL=STATIC_URL %}
+            </section>
+ 			<img style='display:block;' id="cameraImage2" src=""></img>
+ 		</div>
 	</div>
 	
  {% endblock %}
